--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~LhwWQLpT#772wSv8b2ya_M3URHpt8d8XiIchQZqECyDiTtQRQN1k"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NUMBER=+22656001950
+SUDO_NUMBER=+22656001950
+OWNER_NAME=dimi bg
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
